--- a/src/components/dashboard.module.css
+++ b/src/components/dashboard.module.css
@@ -83,7 +83,7 @@
 .customGraphs{
   /* width: 50%; */
   width: 100%;
-  /* height: 25rem; */
+  height: 25rem;
   border: 0.03125rem solid #978a8a;
   border-radius: 0.3125rem;
   padding: 0.625rem;
@@ -98,8 +98,21 @@
   background-color: #D4E4FF;;
 }
 .chartTitle{
-  text-align: center;
+  text-align: left;
+  font-size: 1rem;
+
 } 
+.downloadflex{
+  display: flex;
+  justify-content:space-evenly ;
+
+}
+.downloadbutton{
+  color: blue;
+  width: 2remp;
+  height: 2rem;
+  border: none;
+}
 
 .chartContainer {
   background-color: #fff;
