--- a/src/app/vehicle-wise-parking-details/vehicleWise.module.css
+++ b/src/app/vehicle-wise-parking-details/vehicleWise.module.css
@@ -13,7 +13,7 @@
     gap: 20px;
     /* max-width: 1000px; */
     width: 100%;
-    padding: 20px;
+    /* padding: 20px; */
     grid-template-columns: 1fr;
 }
 .graphsstyles{
@@ -34,13 +34,40 @@
     justify-content: space-between;
 }
 
+.loaderWrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 300px; 
+  }
+  .LoaderOne{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 90vh;
+
+  }
+
+.animatespin {
+    animation: spin 1s linear infinite;
+  }
+  
+  @keyframes spin {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
+  } 
+
 @media (min-width: 768px) {
     .graphcontainer {
       grid-template-columns: repeat(2, 1fr);
       gap: 20px;
       /* max-width: 1000px; */
       width: 100%;
-      padding: 20px;
+      /* padding: 20px; */
     }
     .graphHeading{
         font-size: 1rem;
