--- a/src/app/vehicle-wise-parking-details/vehicleWise.module.css
+++ b/src/app/vehicle-wise-parking-details/vehicleWise.module.css
@@ -2,8 +2,8 @@
     margin: 0.5rem;
 }
 .graphHeading{
-    font-size: 0.7rem;
-    font-weight: bold;
+    font-size: 0.725rem;
+    /* font-weight: bold; */
     padding-bottom: 7px;
     color: blanchedalmond;
 }
@@ -32,6 +32,7 @@
 .headingandselectcontainer{
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 
 .loaderWrapper {
@@ -73,4 +74,27 @@
         font-size: 1rem;
     }
 
+  }
+
+  .vbtn{
+    background: cornflowerblue;
+    color: white;
+    padding: 4px 6px;
+    border: none;
+    cursor: pointer;
+    transition: transform 0.7s, box-shadow 0.1s;
+    border-radius: 5px;
+  }
+  .vbtn:hover{
+    background-color: #45a049 ;
+  }
+
+  .vbtn:active {
+    transform: scale(1.25); /* Button shrinks slightly */
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2); /* Adds a pressed look */
+  }
+
+  .Basebtn{
+    display: flex;
+    gap: 6px;
   }
